istio-gateway/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-poc1
spec:
  hosts:
    - "*"
  gateways:
    - orders-poc1-gateway
  http:
  - match:
    - headers:
        username:
          exact: jason
    route:
    - destination:
        host: http-db-service-poc1
        subset: v1
  - match:
    - headers:
        username:
          exact: freddy
    route:
    - destination:
        host: http-db-service-poc1
        subset: v2
